welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:10: error: type mismatch;
 found   : Unit
 required: Boolean
		if(A==10 && B == 0)	{
                ^